--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="./main.js"></script>
-    <title>Funmap</title>
+    <title>Subjective Map Views</title>
   </head>
   <body>
     <div id="frame">
