added pixel map selector.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -12,6 +12,12 @@
       <canvas id="map">
         Here a map should be shown in browsers which support HTML5.
       </canvas>
+      <select id="selector_pixel_map">
+        <option value="base">Base</option>
+        <option value="color">Color</option>
+        <option value="shape">Shape</option>
+    </select>
     </div>
+    <pre id="log" style="border: 1px solid #fff; color: #fff;"></pre>
   </body>
 </html>
