--- a/webpage/index.html
+++ b/webpage/index.html
@@ -21,6 +21,10 @@
         <input type="checkbox" id="boundaries" checked />
         <input type="color" id="color_boundaries" value="#bbbbbb" />
         <br />
+        <label for="graticule">Graticule</label>
+        <input type="checkbox" id="graticule" checked />
+        <input type="color" id="color_graticule" value="#888888" />
+        <br />
         <label for="select_projection">Projection</label>
         <select id="select_projection">
         </select>
