--- a/webpage/index.html
+++ b/webpage/index.html
@@ -25,6 +25,22 @@
         <input type="checkbox" id="graticule" checked />
         <input type="color" id="color_graticule" value="#888888" />
         <br />
+        Beeline<br />
+        <label for="beeline_start">From</label>
+        <input type="text" id="beeline_start" list="beeline_list" size="10">
+        <datalist id="beeline_list"></datalist>
+        <span id="beeline_start_warning" class="warning"></span>
+        <br />
+        <label for="distances">Distances</label>
+        <input type="checkbox" id="distances" checked />
+        <input type="color" id="color_distances" value="#bb0000" />
+        <br />
+        <label for="beeline_end">To</label>
+        <input type="text" id="beeline_end" list="beeline_list" size="10">
+        <span id="beeline_end_warning" class="warning"></span>
+        <br />
+        <input type="color" id="color_beeline" value="#ff0000" />
+        <br />
         <label for="select_projection">Projection</label>
         <select id="select_projection">
         </select>
