enabled reset trafo.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -27,19 +27,23 @@
         <br />
         Beeline<br />
         <label for="beeline_start">From</label>
-        <input type="text" id="beeline_start" list="beeline_list" size="10">
+        <input type="text" id="beeline_start" class="city_input" list="beeline_list" size="10" />
         <datalist id="beeline_list"></datalist>
         <span id="beeline_start_warning" class="warning"></span>
+        <input type="button" id="center_start" class="trafo_button" value="Center" />
         <br />
         <label for="distances">Distances</label>
         <input type="checkbox" id="distances" checked />
         <input type="color" id="color_distances" value="#bb0000" />
         <br />
         <label for="beeline_end">To</label>
-        <input type="text" id="beeline_end" list="beeline_list" size="10">
+        <input type="text" id="beeline_end" class="city_input" list="beeline_list" size="10" />
         <span id="beeline_end_warning" class="warning"></span>
         <br />
         <input type="color" id="color_beeline" value="#ff0000" />
+        <input type="button" id="center_beeline" class="trafo_button" value="Center" />
+        <br />
+        <input type="button" id="reset_trafo" class="trafo_button" value="Reset Trafo" />
         <br />
         <label for="select_projection">Projection</label>
         <select id="select_projection">
