started work on overlay.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -13,6 +13,11 @@
         Here a map should be shown in browsers which support HTML5.
       </canvas>
       <div id="user_input">
+        <label for="overlay">Overlay</label>
+        <input type="checkbox" id="overlay" />
+        <label for="overlay_alpha">Opacity</label>
+        <input type="range" id="overlay_alpha" min="0" max="255" value="128" />
+        <br />
         <label for="select_image">Background image</label>
         <select id="select_image">
         </select>
