--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="data/favicon.png" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Subjective Map Views</title>
   </head>
   <body>
     <div id="loading" class="center">
-      <img src="./loading.gif" alt="Loading..." />
+      <img src="./data/loading.gif" alt="Loading..." />
       <p style="color: #414141;">Loading...</p>
     </div>
     <script>
