First test implementation of some WebGL code.

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -16,6 +16,6 @@
       let loading = document.getElementById("loading");
       loading.style.height = (html.clientHeight - 32) + "px";
     </script>
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
